# SPDX-License-Identifier: CC0-1.0
# Copyright (C) 2023, Raspberry Pi Ltd

project('libpisp', 'c', 'cpp',
        meson_version : '>= 0.58.0',
        version : '1.3.0',
        default_options : [
            'werror=true',
            'warning_level=2',
            'cpp_std=c++17',
            'buildtype=release',
        ],
        license : 'BSD-2-Clause')

subdir('src')
